--- a/styles/workoutTemplate.css
+++ b/styles/workoutTemplate.css
@@ -28,13 +28,13 @@
   align-items: center;
   flex-direction: column;
   position: absolute;
-  top: 20vh;
+  top: 15vh;
   background-color: white;
   border: solid black 1px;
   overflow: scroll;
   border-radius: 10px;
   padding-top: 10px;
-  height: 500px;
+  height: 450px;
   width: 355px;
 }
 
